--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,12 +47,13 @@
         <div class="article-author-bottom">
           {% include _author-bio.html %}
         </div>
+        <p class="byline"><i class="fa fa-bitcoin"></i> Did you like this article? Consider leaving the author a <a href="/about/#tips"><strong>tip!</strong> </a></p>
         <p class="byline"><strong>{{ page.title }}</strong> was published on <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>{% if page.modified %} and last modified on <time datetime="{{ page.modified | date: "%Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time>{% endif %}.</p>
       </footer>
     </div><!-- /.article-wrap -->
-  {% if site.owner.disqus-shortname and page.comments == true %}
-    <section id="disqus_thread"></section><!-- /#disqus_thread -->
-  {% endif %}
+    {% if site.owner.disqus-shortname and page.comments == true %}
+      <section id="disqus_thread"></section><!-- /#disqus_thread -->
+    {% endif %}
   </article>
 </div><!-- /#main -->
 
